# scenario_simulator_v2

openscenario/openscenario_experimental_catalog/vehicle/: sample_vehicle.yaml
openscenario/openscenario_interpreter/: CMakeLists.txt
openscenario/openscenario_interpreter/include/openscenario_interpreter/: record.hpp  simulator_core.hpp
openscenario/openscenario_interpreter/include/openscenario_interpreter/dependency_control/: fake_simulator_core.hpp  float64.hpp  int64.hpp  uint16.hpp  uint64.hpp
openscenario/openscenario_interpreter/include/openscenario_interpreter/reader/: attribute.hpp
openscenario/openscenario_interpreter/include/openscenario_interpreter/syntax/: axle.hpp  axles.hpp  bounding_box.hpp  center.hpp  condition.hpp  controller.hpp  custom_command_action.hpp  dimensions.hpp  double.hpp  dynamic_constraints.hpp  dynamics_dimension.hpp  dynamics_shape.hpp  integer.hpp  lane_change_action.hpp  lane_position.hpp  misc_object.hpp  misc_object_category.hpp  object_controller.hpp  orientation.hpp  pedestrian.hpp  pedestrian_category.hpp  performance.hpp  position.hpp  range.hpp  relative_distance_condition.hpp  relative_target_lane.hpp  relative_target_speed.hpp  relative_world_position.hpp  route.hpp  speed_target_value_type.hpp  storyboard.hpp  traffic_signal_controller.hpp  transition_dynamics.hpp  unsigned_integer.hpp  unsigned_short.hpp  vehicle.hpp  vehicle_category.hpp  waypoint.hpp  world_position.hpp
openscenario/openscenario_interpreter/src/syntax/: acceleration_condition.cpp  acquire_position_action.cpp  add_entity_action.cpp  assign_controller_action.cpp  assign_route_action.cpp  bounding_box.cpp  collision_condition.cpp  custom_command_action.cpp  distance_condition.cpp  dynamic_constraints.cpp  lane_change_action.cpp  lane_position.cpp  misc_object.cpp  orientation.cpp  pedestrian.cpp  performance.cpp  position.cpp  reach_position_condition.cpp  relative_distance_condition.cpp  relative_target_lane.cpp  relative_world_position.cpp  route.cpp  simulation_time_condition.cpp  speed_action.cpp  speed_condition.cpp  speed_profile_action.cpp  stand_still_condition.cpp  teleport_action.cpp  time_headway_condition.cpp  traffic_signal_condition.cpp  traffic_signal_controller.cpp  traffic_signal_controller_action.cpp  traffic_signal_controller_condition.cpp  traffic_signal_state.cpp  traffic_signal_state_action.cpp  traffic_signals.cpp  user_defined_value_condition.cpp  vehicle.cpp  waypoint.cpp  world_position.cpp
openscenario/openscenario_preprocessor/: CMakeLists.txt  package.xml
openscenario/openscenario_preprocessor/include/openscenario_preprocessor/: openscenario_preprocessor.hpp
openscenario/openscenario_preprocessor/src/: openscenario_preprocessor_command.cpp  openscenario_preprocessor_node.cpp
simulation/simple_sensor_simulator/src/: simple_sensor_simulator.cpp
simulation/traffic_simulator/include/traffic_simulator/api/: api.hpp  configuration.hpp
simulation/traffic_simulator/include/traffic_simulator/entity/: ego_entity.hpp  entity_base.hpp  misc_object_entity.hpp  pedestrian_entity.hpp  vehicle_entity.hpp
simulation/traffic_simulator/src/api/: api.cpp
simulation/traffic_simulator/src/entity/: ego_entity.cpp  entity_base.cpp  entity_manager.cpp  misc_object_entity.cpp  pedestrian_entity.cpp  vehicle_entity.cpp
simulation/traffic_simulator/src/hdmap_utils/: hdmap_utils.cpp
